--- a/word-division/build.gradle
+++ b/word-division/build.gradle
@@ -11,7 +11,9 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-}
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
+    testImplementation "org.jetbrains.kotlin:kotlin-test"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit"}
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
