--- a/word-division-base/build.gradle
+++ b/word-division-base/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'org.jetbrains.dokka' version '0.9.18'
 }
 
 group 'com.wapitia.games'
 version '1.0-SNAPSHOT'
 
 repositories {
+    jcenter() // or maven { url 'https://dl.bintray.com/kotlin/dokka' }
     mavenCentral()
 }
 
@@ -18,6 +20,13 @@ dependencies {
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+dokka {
+    outputFormat = 'html'
+    outputDirectory = "$buildDir/javadoc"
+    testLogging.showStandardStreams = true
 }
