--- a/word-division-jfx/build.gradle
+++ b/word-division-jfx/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id 'org.jetbrains.dokka' version '0.9.18'
 }
-
+//
 sourceCompatibility = 11
 targetCompatibility = 11
 
@@ -16,6 +16,10 @@ repositories {
     mavenCentral()
 }
 
+application {
+    mainClassName = "com.wapitia.games.worddivision.front.jfx.JfxWordDivisionApp"
+}
+
 javafx {
     version = "12"
     modules = [ 'javafx.controls', 'javafx.fxml']
@@ -25,7 +29,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     testImplementation "org.jetbrains.kotlin:kotlin-test"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit"}
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
+    compile project(':word-division-base')
+}
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
